--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,8 @@ kotlinx-immutableCollections = "org.jetbrains.kotlinx:kotlinx-collections-immuta
 
 jda = "net.dv8tion:JDA:5.6.1"
 
+slf4jApi = "org.slf4j:slf4j-api:2.0.17"
+
 junit-bom = "org.junit:junit-bom:5.13.1"
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter" }
 junit-platformLauncher = { module = "org.junit.platform:junit-platform-launcher" }
